--- a/DataLayers/i18n/es.json
+++ b/DataLayers/i18n/es.json
@@ -13,28 +13,28 @@
     "buildable.not-buildable": "No se puede construir aquí",
 
     // coverage: bee houses
-    "bee-houses.name": "Cobertura: Colmenas",
-    "bee-houses.range": "Rango Flores",
+    "bee-houses.name": "Alcance: Colmenas",
+    "bee-houses.range": "Rango De Alcance",
 
     // coverage: Junimo huts
-    "junimo-huts.name": "Cobertura: Cabaña Junimo",
-    "junimo-huts.can-harvest": "Puede Cosechar",
-    "junimo-huts.cannot-harvest": "No Puede Cosechar",
+    "junimo-huts.name": "Alcance: Cabaña Junimo",
+    "junimo-huts.can-harvest": "Pueden Cosechar",
+    "junimo-huts.cannot-harvest": "No Pueden Cosechar",
 
     // coverage: scarecrows
-    "scarecrows.name": "Cobertura: Espantapájaros",
+    "scarecrows.name": "Alcance: Espantapájaros",
     "scarecrows.protected": "Protegido",
     "scarecrows.exposed": "Expuesto",
 
     // coverage: sprinklers
-    "sprinklers.name": "Cobertura: Aspersores",
+    "sprinklers.name": "Alcance: Aspersores",
     "sprinklers.covered": "Cubierto",
-    "sprinklers.dry-crops": "Cultivos Secos",
+    "sprinklers.dry-crops": "Cultivos No Cubiertos",
 
     // crops: harvest
     "crop-harvest.name": "Cultivos: Listos para cosechar",
     "crop-harvest.ready": "Listo",
-    "crop-harvest.not-ready": "No Listo Aún",
+    "crop-harvest.not-ready": "No Está Listo Aún",
     "crop-harvest.not-enough-time": "Tiempo Insuficiente",
 
     // crops: watered
@@ -60,12 +60,12 @@
     "machines.finished": "Finalizado",
 
     // tile grid
-    "grid.name": "Tile Grid", // TODO
+    "grid.name": "Cuadrícula de baldosas", // TODO
 
     // tillable
     "tillable.name": "Tierra Cultivable",
     "tillable.tillable": "Cultivable",
-    "tillable.tilled": "Tilled", // TODO
+    "tillable.tilled": "Labrado", // TODO
     "tillable.occupied": "Ocupada",
     "tillable.not-tillable": "No Cultivable"
 }
